--- a/scss/_tools.scss
+++ b/scss/_tools.scss
@@ -49,8 +49,28 @@ $lowIe: false !default; // 默认不兼容ie9一下的
     right: 0;
     bottom: 0;
     left: 0;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
+}
+
+@mixin imgCenter($width,$height) {
+	position: relative;
+	overflow: hidden;
+	width: $width;
+	height: $height;
+	@if($lowIe){
+		*text-align: center;
+		*line-height: $height;
+		*font-size: floor($height / 1.14);
+	}
+	img {
+		@extend %positionCenter;
+		max-width: $width;
+		max-height: $height;
+		if($lowIe) {
+			*position: static;
+			*vertical-align:middle;
+		}
+	}
 }
 
 @mixin marginCenter($width, $height) {
@@ -87,7 +107,7 @@ $lowIe: false !default; // 默认不兼容ie9一下的
         border-color: transparent transparent transparent $color;
     }
     @else {
-        @error "Invalid direction: '#{$direction}'.";
+        @error "Invalid direction.";
     }
 }
 
@@ -96,7 +116,6 @@ $lowIe: false !default; // 默认不兼容ie9一下的
     display: -webkit-box;
     overflow: hidden;
     text-overflow: ellipsis;
-    word-wrap: normal;
     -webkit-line-clamp: $line;
     -webkit-box-orient: vertical;
 }
